--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>0xAyu - Ethical Hacker Portfolio</title>
+  <title>4xSUKOON</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet" />
   <style>
@@ -49,6 +49,21 @@
   font-family: 'Share Tech Mono', monospace;
 }
 
+.notification {
+  background: rgba(0,255,0,0.05);
+  border: 1px solid #00ff99;
+  border-radius: 0.5rem;
+  padding: 0.75rem;
+  margin-top: 1rem;
+  animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+  0% { transform: scale(1); opacity: 1; }
+  50% { transform: scale(1.02); opacity: 0.7; }
+  100% { transform: scale(1); opacity: 1; }
+}
+
   </style>
 </head>
 <body class="flex items-center justify-center min-h-screen p-6 relative">
@@ -58,13 +73,13 @@
   </div>  <main class="bg-black bg-opacity-30 border border-green-400 p-8 rounded-xl shadow-2xl w-full max-w-md text-center relative z-10">
     <div class="mb-6 animate-bounce">
       <img src="https://raw.githubusercontent.com/RARExSIGMA2025/Insta/main/pfp.jpg" alt="Profile" class="w-32 h-32 mx-auto rounded-full border-4 border-green-400 mb-4 shadow-lg hover:scale-105 transform transition duration-300" />
-      <h1 class="text-3xl glitch-text">0xAyu</h1>
-      <p class="text-sm mt-2 flicker">Ethical Hacker | Digital Nomad | Cyber Explorer</p>
+      <h1 class="text-3xl glitch-text">4xSUKOON</h1>
+      <p class="text-sm mt-2 flicker">:: access level: undefined ::</p>
     </div><div class="text-left bg-green-800 bg-opacity-10 p-4 rounded mb-6 text-sm animate-pulse">
-  <p>$ whoami</p>
-  <p class="ml-4">Ayu - seeker of bugs, protector of bytes.</p>
-  <p class="mt-2">$ mission</p>
-  <p class="ml-4">Defend the web. Build ethical code. Disappear in the shadows.</p>
+  <p>&gt; status:</p>
+  <p class="ml-4">🟢 System Active | Tracking anomalies | Connected to deep channels</p>
+  <p class="mt-2">&gt; description:</p>
+  <p class="ml-4">undefined entity. precision-driven. coded in silence.</p>
 </div>
 
 <div class="space-y-4" id="links">
@@ -73,14 +88,19 @@
   </a>
 </div>
 
+<div class="notification text-green-300 text-xs">
+  ⚠️ Surveillance active: your presence is being traced.<br/>
+  🔒 You are not alone.
+</div>
+
 <footer class="mt-6 text-xs text-green-600">
-  <p>Last Access: <span id="lastAccess"></span></p>
-  <p>&copy; 2025 0xAyu. All rights reserved.</p>
+  <p>Last Trace: <span id="lastAccess"></span></p>
+  <p>&copy; 2025 4xSUKOON. signal encrypted.</p>
 </footer>
 
   </main>  <script>
     const loader = document.getElementById("loader");
-    const text = ">> Welcome, 0xAyu_Initializing Portfolio...";
+    const text = ">> launching instance: 4xSUKOON...";
     let i = 0;
     const typewriter = document.getElementById("typewriter");
 
@@ -97,12 +117,11 @@
 
     document.getElementById("lastAccess").innerText = new Date().toLocaleString();
 
-    // Auto-manage buttons (only show when link provided)
     const profiles = {
-      github: '', // e.g. 'https://github.com/yourprofile'
-      linkedin: '', // e.g. 'https://linkedin.com/in/yourprofile'
-      resume: '', // e.g. 'https://yourresume.link'
-      projects: '' // e.g. 'https://yourprojects.link'
+      github: '',
+      linkedin: '',
+      resume: '',
+      projects: ''
     };
 
     const linksContainer = document.getElementById("links");
