--- a/index.html
+++ b/index.html
@@ -45,8 +45,31 @@
   animation: flicker 1.5s infinite;
 }
 
-#loader {
-  font-family: 'Share Tech Mono', monospace;
+.float-anim {
+  animation: floatUpDown 4s ease-in-out infinite;
+}
+
+@keyframes floatUpDown {
+  0%, 100% { transform: translateY(0); }
+  50% { transform: translateY(-12px); }
+}
+
+.matrix {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: black;
+  z-index: -2;
+  pointer-events: none;
+  opacity: 0.05;
+  animation: scrollMatrix 20s linear infinite;
+}
+
+@keyframes scrollMatrix {
+  from { background-position: 0 0; }
+  to { background-position: 0 1000px; }
 }
 
 .notification {
@@ -67,12 +90,12 @@
   </style>
 </head>
 <body class="flex items-center justify-center min-h-screen p-6 relative">
-  <!-- Loader -->
-  <div class="fixed inset-0 bg-black flex items-center justify-center text-green-400 text-xl z-50" id="loader">
+  <!-- Matrix Rain BG Placeholder -->
+  <div class="matrix" style="background-image: url('https://media.giphy.com/media/xT0xeJpnrWC4XWblEk/giphy.gif'); background-size: cover;"></div>  <!-- Loader -->  <div class="fixed inset-0 bg-black flex items-center justify-center text-green-400 text-xl z-50" id="loader">
     <span id="typewriter">initializing...</span>
-  </div>  <main class="bg-black bg-opacity-30 border border-green-400 p-8 rounded-xl shadow-2xl w-full max-w-md text-center relative z-10">
-    <div class="mb-6 animate-bounce">
-      <img src="https://raw.githubusercontent.com/RARExSIGMA2025/Insta/main/pfp.jpg" alt="Profile" class="w-32 h-32 mx-auto rounded-full border-4 border-green-400 mb-4 shadow-lg hover:scale-105 transform transition duration-300" />
+  </div>  <main class="bg-black bg-opacity-30 border border-green-400 p-8 rounded-xl shadow-2xl w-full max-w-md text-center relative z-10 animate-fade-in">
+    <div class="mb-6 float-anim">
+      <img src="https://raw.githubusercontent.com/RARExSIGMA2025/Insta/main/pfp.jpg" alt="Profile" class="w-32 h-32 mx-auto rounded-full border-4 border-green-400 mb-4 shadow-lg hover:scale-105 transform transition duration-300 rotate-3 hover:rotate-0" />
       <h1 class="text-3xl glitch-text">4xSUKOON</h1>
       <p class="text-sm mt-2 flicker">:: access level: undefined ::</p>
     </div><div class="text-left bg-green-800 bg-opacity-10 p-4 rounded mb-6 text-sm animate-pulse">
