--- a/index.html
+++ b/index.html
@@ -66,11 +66,46 @@
       from, to { border-color: transparent }
       50% { border-color: #00ff99 }
     }
+    .floaty {
+      animation: float 6s ease-in-out infinite;
+    }
+    @keyframes float {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-20px); }
+    }
+    .flicker {
+      animation: flicker 3s infinite;
+    }
+    @keyframes flicker {
+      0%, 18%, 22%, 25%, 53%, 57%, 100% {
+        opacity: 1;
+      }
+      20%, 24%, 55% {
+        opacity: 0.4;
+      }
+    }
+    .wavy-text span {
+      display: inline-block;
+      animation: wave 1.5s infinite;
+    }
+    .wavy-text span:nth-child(even) {
+      animation-delay: 0.2s;
+    }
+    @keyframes wave {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
+    }
   </style>
 </head><body class="crt">
   <canvas id="matrixCanvas" class="matrix"></canvas>  <div class="flex flex-col items-center justify-center h-screen text-center">
-    <img src="https://avatars.githubusercontent.com/u/111750161?v=4" alt="Profile" class="rounded-full w-40 h-40 shadow-lg transform hover:scale-110 transition duration-500 glitch"><h1 class="text-4xl md:text-6xl mt-6 glitch">4xSUKOON</h1>
+    <img src="https://avatars.githubusercontent.com/u/111750161?v=4" alt="Profile" class="rounded-full w-40 h-40 shadow-lg border-4 border-green-400 floaty"><h1 class="text-4xl md:text-6xl mt-6 glitch flicker">4xSUKOON</h1>
 <p class="text-lg md:text-xl mt-4 text-green-400 typewriter">Access Granted: Identity Interface Online</p>
+
+<div class="mt-6 text-green-400 wavy-text">
+  <span>D</span><span>E</span><span>C</span><span>O</span><span>D</span><span>I</span><span>N</span><span>G</span>
+  <span>⠀</span>
+  <span>S</span><span>I</span><span>G</span><span>N</span><span>A</span><span>L</span><span>S</span>
+</div>
 
 <div id="socialLinks" class="mt-10 flex space-x-6"></div>
 
@@ -84,9 +119,7 @@
     canvas.height = window.innerHeight;
     canvas.width = window.innerWidth;
 
-    let chars = "01";
-    chars = chars.split("");
-
+    let chars = "01".split("");
     let fontSize = 14;
     let columns = canvas.width / fontSize;
     let drops = Array(Math.floor(columns)).fill(1);
@@ -104,7 +137,6 @@
         if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) {
           drops[i] = 0;
         }
-
         drops[i]++;
       }
     }
@@ -117,7 +149,7 @@
       audio.play().catch(() => {});
     });
 
-    // Social Profiles (customize this part)
+    // Social Profiles
     const profiles = {
       instagram: "https://www.instagram.com/4xsukoon"
     };
