--- a/index.html
+++ b/index.html
@@ -4,29 +4,36 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>4xSUKOON - Interface Online</title>
+  
+  <!-- TailwindCSS -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"/>
-  <!-- New font imports for a modern, tech-inspired look -->
+
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@400;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet"/>
+
+  <!-- Metadata for SEO & Social Preview -->
+  <meta property="og:title" content="4xSUKOON - Interface Online" />
+  <meta property="og:description" content="Techno-hacker aesthetic. Interface online. Decoding Silence." />
+  <meta property="og:image" content="https://avatars.githubusercontent.com/u/111750161?v=4" />
+  <meta name="theme-color" content="#00ccff" />
+
   <style>
-    /* Base Styles: Dark gradient background, modern fonts, crisp colors */
     body {
       margin: 0;
-      font-family: 'Inter', sans-serif; /* Default font for body text */
-      background: linear-gradient(135deg, #1A202C, #2D3748); /* Deep, subtle dark gradient */
-      color: #E2E8F0; /* Soft white for general text */
-      overflow: hidden; /* Prevent scrollbars unless content truly overflows */
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(135deg, #1A202C, #2D3748);
+      color: #E2E8F0;
+      overflow-x: hidden;
       display: flex;
       justify-content: center;
       align-items: center;
-      min-height: 100vh; /* Ensure it takes full viewport height */
+      min-height: 100vh;
     }
 
-    /* Heading specific font */
     h1 {
-      font-family: 'Oxanium', monospace; /* Techy, modern font for headings */
+      font-family: 'Oxanium', monospace;
     }
 
-    /* Custom animations for a sleek, futuristic feel */
     .fade-in-up {
       animation: fadeInUp 1s ease-out forwards;
       opacity: 0;
@@ -65,62 +72,57 @@
       50% { transform: translateY(-8px); }
     }
 
-    /* Delay for staggered animations */
+    /* Animation delays for staggered elements */
     .delay-100 { animation-delay: 0.1s; }
     .delay-200 { animation-delay: 0.2s; }
     .delay-300 { animation-delay: 0.3s; }
     .delay-400 { animation-delay: 0.4s; }
     .delay-500 { animation-delay: 0.5s; }
-    .delay-600 { animation-delay: 0.6s; }
   </style>
 </head>
 <body class="flex flex-col items-center justify-center min-h-screen p-4">
 
-  <div class="flex flex-col items-center text-center max-w-lg mx-auto">
-    <!-- Profile Image with subtle glow and float animation -->
+  <div class="flex flex-col items-center text-center max-w-lg w-full mx-auto px-4 sm:px-6">
+    
+    <!-- Profile Image -->
     <img src="https://avatars.githubusercontent.com/u/111750161?v=4"
          alt="4xSUKOON"
          class="rounded-full w-32 h-32 md:w-40 md:h-40 object-cover shadow-lg pulse-glow subtle-float
                 hover:scale-105 transition duration-300 ease-in-out fade-in-up"/>
 
-    <!-- Main Heading with futuristic styling -->
+    <!-- Heading -->
     <h1 class="text-4xl md:text-5xl lg:text-6xl mt-6 font-bold text-blue-400 fade-in-up delay-100">
       4xSUKOON
     </h1>
 
-    <!-- Subheading with a clean, informative tone -->
+    <!-- Status Text -->
     <p class="text-lg md:text-xl mt-4 text-gray-300 fade-in-up delay-200">
       Interface Online: System Operational
     </p>
 
-    <!-- Tagline with a modern, slightly abstract feel -->
+    <!-- Tagline -->
     <div class="mt-4 text-xl md:text-2xl text-blue-300 fade-in-up delay-300">
       <span class="font-medium">DECODING</span> <span class="font-light">SILENCE</span>
     </div>
 
-    <!-- Dynamic Social Links Section -->
+    <!-- Social Links -->
     <div id="socialLinks" class="mt-10 flex flex-wrap justify-center space-x-4 md:space-x-6 fade-in-up delay-400">
-      <!-- Social links will be injected here by JavaScript -->
+      <!-- Links will be inserted here -->
     </div>
 
-    <!-- Footer for copyright/attribution -->
+    <!-- Footer -->
     <footer class="mt-16 text-sm text-gray-500 fade-in-up delay-500">
       &copy; 2024 4xSUKOON. All systems nominal.
     </footer>
   </div>
 
   <script>
-    // Dynamic Social Links Generation
     const profiles = {
-      instagram: "https://www.instagram.com/4xsukoon",
-      github: "https://github.com/your-github", // Placeholder: Add actual GitHub link
-      telegram: "https://t.me/your-telegram",   // Placeholder: Add actual Telegram link
-      // Add more profiles as needed
-      // website: "https://www.yourwebsite.com",
-      // linkedin: "https://www.linkedin.com/in/yourprofile",
+      instagram: "https://www.instagram.com/4xsukoon"
+      // github: "https://github.com/your-github",
+      // telegram: "https://t.me/your-telegram",
     };
 
-    // Simple text labels for social links. For icons, a library like Lucide or Font Awesome would be integrated.
     const linkLabels = {
       instagram: "Instagram",
       github: "GitHub",
@@ -130,22 +132,21 @@
     };
 
     const container = document.getElementById("socialLinks");
-    let delay = 0; // For staggered animation of links
+    let delay = 0;
 
     for (const [name, url] of Object.entries(profiles)) {
       if (url) {
         const a = document.createElement("a");
         a.href = url;
         a.target = "_blank";
-        a.textContent = linkLabels[name] || name.charAt(0).toUpperCase() + name.slice(1); // Fallback to capitalized name
+        a.textContent = linkLabels[name] || name.charAt(0).toUpperCase() + name.slice(1);
         a.className = `text-blue-300 hover:text-white transform hover:scale-110 transition duration-300 ease-in-out
                        px-4 py-2 rounded-lg border border-blue-400 hover:border-white text-base md:text-lg
-                       fade-in-up delay-${500 + delay}`; // Stagger animation
+                       fade-in-up delay-${500 + delay}`;
         container.appendChild(a);
-        delay += 100; // Increment delay for next link
+        delay += 100;
       }
     }
   </script>
 </body>
 </html>
-
